# ed25519-lock

./: Cargo.toml  README.md  capsule.toml
contracts/ed25519-lock/: Cargo.toml
contracts/ed25519-lock/src/: entry.rs
mol/: Cargo.toml
mol/src/: lib.rs  mol.rs  sig.mol
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs
