[package]
name = "ed25519-lock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
serde_bytes = { version = "0.11", optional = true, default-features = false }
ed25519 = { version = "1", default-features = false }
mol = {path = "../../mol", default_features = false, features = ["no-std"]}


[dependencies.ed25519-dalek]
version = "1.0.1"
default_features = false
features = ["alloc","u64_backend", "batch_deterministic"]
